feat: 크롤링한 데이터 mysql DB 적재

--- a/Moviedata_crawling.ipynb
+++ b/Moviedata_crawling.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 1,
       "id": "f300ce1f",
       "metadata": {
         "id": "f300ce1f"
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 2,
       "id": "7d6b752c",
       "metadata": {},
       "outputs": [],
@@ -131,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 3,
       "id": "6f3a6cc3",
       "metadata": {},
       "outputs": [],
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 11,
       "id": "f003c09a",
       "metadata": {},
       "outputs": [],
@@ -156,19 +156,19 @@
         "from datetime import datetime\n",
         "\n",
         "def insert_db(df):\n",
-        "\n",
+        "    df = df.dropna()\n",
         "    pymysql.install_as_MySQLdb()\n",
         "    import MySQLdb\n",
         "\n",
         "    engine = create_engine(\"mysql+mysqldb://root:0000@localhost:3306/comento\", encoding='utf-8')\n",
         "    conn = engine.connect()\n",
-        "    df.to_sql(name=f'movie_review({datetime.today()})', con=engine, if_exists='append', index=False)\n",
+        "    df.to_sql(name=f'movie_review({datetime.now().strftime(\"%Y-%m-%d\")})', con=engine, if_exists='append', index=False)\n",
         "    "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 5,
       "id": "9e4f3bcb",
       "metadata": {},
       "outputs": [
@@ -184,8 +184,16 @@
       ],
       "source": [
         "titles, rates, reviews = review_crawl(1000)\n",
-        "\n",
-        "movie = convert_df(titles, rates, reviews)\n",
+        "movie = convert_df(titles, rates, reviews)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "id": "d26df256",
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "insert_db(movie)"
       ]
     }
